# ModelReducer

./: .gitattributes  .gitignore  Dockerfile  JenkinsfileCD  JenkinsfileCI  README.md  docker-compose.yaml  poetry.toml  pyproject.toml  setup.sh
tests/: test_something.py
